--- a/views/scss/inc/_components.scss
+++ b/views/scss/inc/_components.scss
@@ -152,10 +152,10 @@ ul.listbox {
     top: -1000px;
     padding: 40px;
     position: fixed;
-    z-index: 99;
+    z-index: 100002;
     left: 0;
 
-    #modal-close {
+    .modal-close {
         position: absolute;
         right: 12px;
         top: 12px;
@@ -177,7 +177,7 @@ ul.listbox {
     width: 100%;
     left: 0;
     top: 0;
-    z-index: 98;
+    z-index: 100001;
 }
 
 /* Button groups */
